--- a/Makefilevm
+++ b/Makefilevm
@@ -1,6 +1,6 @@
 obj-m += rt_table_drv.o
-rt_table_drv-objs += register_drv.o LinkedListApi.o rt_table.o rt_fops.o kernthread.o Queue.o
+rt_table_drv-objs += register_drv.o common/LinkedListApi.o RT/rt_table.o RT/rt_fops.o common/kernthread.o common/Queue.o common/kernutils.o
 all:
-	make -C /lib/modules/`uname -r`/build M=$(PWD) modules
+	make -C /lib/modules/`uname -a`/build M=$(PWD) modules
 clean:
-	make -C /lib/modules/`uname -r`/build M=$(PWD) clean
+	make -C /lib/modules/`uname -a`/build M=$(PWD) clean
