File re-organisatins, Created two similar dirvers - RT and MAC. We will implement non-blocking poll/select operations on the two devices

--- a/Makefilevm
+++ b/Makefilevm
@@ -1,6 +1,9 @@
-obj-m += rt_table_drv.o
-rt_table_drv-objs += register_drv.o common/LinkedListApi.o RT/rt_table.o RT/rt_fops.o common/kernthread.o common/Queue.o common/kernutils.o
+obj-m += mac_table_drv.o rt_table_drv.o
+
+rt_table_drv-objs += register_drv.o common/LinkedListApi.o RT/rt_table.o RT/rt_fops.o common/kernthread.o common/Queue.o common/kernutils.o MAC/mac_fops.o MAC/mac_table.o
+
+mac_table_drv-objs += register_drv.o common/LinkedListApi.o MAC/mac_table.o MAC/mac_fops.o common/kernthread.o common/Queue.o common/kernutils.o RT/rt_fops.o RT/rt_table.o
 all:
-	make -C /lib/modules/`uname -a`/build M=$(PWD) modules
+	make -C /lib/modules/`uname -r`/build M=$(PWD) modules
 clean:
-	make -C /lib/modules/`uname -a`/build M=$(PWD) clean
+	make -C /lib/modules/`uname -r`/build M=$(PWD) clean
